# model_template

./: .gitignore  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: issue.yaml
.github/checks/: files.py  run_src.py
.github/workflows/: files.py  files.yaml  run_model.py  run_model.yaml  test_model_template.yml
scripts/: config.py
src/: 01_download_data.py  settings.py  utils_zlflo.py
tests/: test_model_template.py
