[project]
name = "model_template"
version = "0.1.0"
description = "Example setup"
authors = [
    { name = "Onno Ebbens", email = "o.ebbens@artesia-water.nl" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nlmod",
    "zlflodata @ git+https://github.com/ZLFLO/data.git@main",
]

[project.optional-dependencies] 
test = ["ruff>=0.11.8", "model_template[dev]", "pytest>=7", "pytest-cov", "pytest-dependency"]

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
show-fixes = true
fix = true

[tool.uv]
prerelease = "allow"
