name = "PROJECT_NAME"
version = "0.0.0"
description = "PROJECT_DESCRIPTION"
readme = "README.md"
authors = [{ name = "YOUR NAME", email = "your.email@example.com" }]
requires-python = "~=3.13"                                           # define python version
dependencies = ["zlflodata @ git+https://github.com/ZLFLO/data.git@main",]

[project.optional-dependencies] 
test = ["ruff>=0.11.8", "model_template[dev]", "pytest>=7", "pytest-cov", "pytest-dependency"]
dev = ["ruff", "pre-commit"]

[tool.uv]
prerelease = "allow"

[tool.ruff]
extend-include = ["*.ipynb"]
lint.extend-select = ["I"]
show-fixes = true
fix = true
